# smart-contracts

./: Cargo.toml  contract.wasm.v1  contract.wasm.v1.tar  mint_parameters.json
concordium-out/: module.wasm.v1
deploy-scripts/: Cargo.toml
deploy-scripts/src/: main.rs
src/: lib-working.rs  lib.rs
tests/: tests.rs
